# server/routes.js
@@ -1,7 +1,0 @@
-export default app => {
-    app.get('/user', (req, res) => {
-        res.json({
-            data: 'Hello, world!'
-        })
-    });
-};
